# libkohn_avi

./: CMakeLists.txt  README.md
source/: fileio.c  fileio.h  kohn_avi.c  kohn_avi.h  readavi.c
